fix overflow x

--- a/app/globals.css
+++ b/app/globals.css
@@ -185,5 +185,4 @@
 
 html {
   scroll-behavior: smooth !important;
-  overflow-x: hidden !important;
 }
